--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.19",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -26,6 +27,7 @@
     "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.21",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3",
     "zod": "^3.23.8"
