--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/index.js",
-    "dev": "nodemon --watch src --exec \"ts-node src/index.ts\""
+    "dev": "npx prisma generate --no-engine && next dev"
   },
   "keywords": [],
   "author": "",
@@ -20,11 +20,11 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "prisma": "^5.9.1",
+    "prisma": "^5.16.2",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.16.2",
     "@types/express": "^4.17.21",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
