--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.19",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "prisma": "^5.16.2",
+    "prisma": "^5.9.1",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.2",
+    "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.21",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
